fixed center aligning for calendar

--- a/fes/static/style.css
+++ b/fes/static/style.css
@@ -15,6 +15,10 @@
   text-align: center;
 }
 
+.main2 {
+  margin-top: 100px;
+}
+
 .container-fluid {
   max-width:1150px;
 }
